--- a/index.html
+++ b/index.html
@@ -14,19 +14,17 @@
         <h1>Quiz Page</h1>
     </div>
     <div id="main-container">
-        <div>
+        <div id="ques-time">
             <div id="quiz"></div>
-            <div class="button">
-                <button id="next">Next</button>
-                <button id="skip">Skip</button>
-                <button id="finalSubmit">Submit</button>
+            <div class="countdown">
+                <div id="timer"></div>
             </div>
         </div>
-        <div>
-            <h1>All Questions</h1>
-            <div id="all-questions">
 
-            </div>
+        <div id="button">
+            <button id="next">Next</button>
+            <button id="skip">Skip</button>
+            <button id="finalSubmit">Submit</button>
         </div>
     </div>
 </body>
