--- a/login.html
+++ b/login.html
@@ -1,22 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login</title>
+  <link rel="stylesheet" href="login.css">
 </head>
+
 <body>
-  <div>
-    <h1>Login</h1>
-    <form id="loginForm">
-      <label>Username</label>
-      <input name="username" required />
-      <label>Password</label>
-      <input name="password" type="password" required />
-      <button type="submit">Login</button>
-    </form>
-    <p>Don't have an account? <a href="registration.html">Register</a></p>
+  <div class="main-login">
+    <div class="quiz-content">
+      <h1>Let's Start</h1>
+      <h1>Quiz</h1>
+    </div>
+    <div class="second-login">
+      <div class="login-form">
+        <h1>Login</h1><br>
+        <form id="loginForm">
+          <label>Username</label><br><br>
+          <input name="username" required /><br><br>
+          <label>Password</label><br><br>
+          <input name="password" type="password" required /><br><br>
+          <button type="submit">Login</button><br>
+        </form>
+        <br><p>Don't have an account? <a href="registration.html">Register</a></p>
+      </div>
+      <div class="image">
+        <img src="quiz image.jpg">
+      </div>
+    </div>
   </div>
+
 
   <script>
     const loginForm = document.getElementById("loginForm");
@@ -40,4 +55,5 @@
     });
   </script>
 </body>
+
 </html>
