--- a/index.html
+++ b/index.html
@@ -2,17 +2,24 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Quiz with Face Detection & TTS</title>
+    <link rel="stylesheet" href="style.css" />
+    <script defer src="face-api.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/html2pdf.js@0.10.1/dist/html2pdf.bundle.min.js"></script>
+    <script defer src="script.js"></script>
 </head>
 
 <body>
-    <div>
-        <h1>Quiz Page</h1>
+    <div style="display: flex; align-items: center; justify-content: center;">
+        <h1 id="quiz-header">Quick Quiz</h1>
+        <div id="camera-container">
+            <video id="camera" width="170" height="120" autoplay muted></video>
+            <div id="camera-warning"></div>
+        </div>
     </div>
+
     <div id="main-container">
         <div id="ques-time">
             <div id="quiz"></div>
@@ -25,6 +32,7 @@
             <button id="next">Next</button>
             <button id="skip">Skip</button>
             <button id="finalSubmit">Submit</button>
+            <button id="tts-toggle">🔊 Enable Voice</button>
         </div>
     </div>
 </body>
